crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan-8.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<a ==123 />"

---
- StartTag:
    name: a
    attributes:
      - name: "="
        value:
          content: "123"
          location:
            start: "Pos: 5, Ln: 1, Col: 6"
            end: "Pos: 8, Ln: 1, Col: 9"
        name_loc:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 4, Ln: 1, Col: 5"
        location:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 8, Ln: 1, Col: 9"
    self_closing: true

