crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<![CDATA["

---
- Comment: "[CDATA["

