crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan_raw_text-2.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<style></styl"

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text: "</styl"

