crates/compiler/tests/tokenizer_test/snapshots/integration_test__tokenizer_test__scan_raw_text.snap
---
source: crates/compiler/tests/tokenizer_test/mod.rs
expression: "<style></style"

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text: "</style"

